force-app/main/default/objects/Credit_History__c/Credit_History__c.object-meta.xml
<CustomObject>
    <label>Credit History</label>
    <nameField>
        <label>Credit History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>