force-app/main/default/objects/Credit_History__c/fields/Account_DOB__c.field-meta.xml
<CustomField>
    <fullName>Account_DOB__c</fullName>
    <label>Account Holder DOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>