force-app/main/default/objects/Credit_History__c/fields/Assigned_Ac_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Ac_Rep__c</fullName>
    <label>Assigned Account Rep</label>
    <length>30</length>
    <type>Text</type>
</CustomField>