force-app/main/default/objects/Credit_History__c/fields/Authorized_DOB__c.field-meta.xml
<CustomField>
    <fullName>Authorized_DOB__c</fullName>
    <label>Authorized User DOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>