force-app/main/default/objects/Credit_History__c/fields/Authorized_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Name__c</fullName>
    <label>Authorized User Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>