force-app/main/default/objects/Credit_History__c/fields/Authorized_user_SS__c.field-meta.xml
<CustomField>
    <fullName>Authorized_user_SS__c</fullName>
    <label>Authorized User SS#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>