force-app/main/default/objects/Credit_History__c/fields/Bandruptcy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bandruptcy_Flag__c</fullName>
    <label>Bandruptcy Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>