force-app/main/default/objects/Credit_History__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>