force-app/main/default/objects/Credit_History__c/fields/Busi_Owner_2_Ph__c.field-meta.xml
<CustomField>
    <fullName>Busi_Owner_2_Ph__c</fullName>
    <label>Business Owner 2 Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>