force-app/main/default/objects/Credit_History__c/fields/Business_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_1__c</fullName>
    <label>Business Owner 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>