force-app/main/default/objects/Credit_History__c/fields/Business_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_2__c</fullName>
    <label>Business Owner 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>