force-app/main/default/objects/Credit_History__c/fields/CBR__c.field-meta.xml
<CustomField>
    <fullName>CBR__c</fullName>
    <label>CBR #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>