force-app/main/default/objects/Credit_History__c/fields/CPNI_Y_N__c.field-meta.xml
<CustomField>
    <fullName>CPNI_Y_N__c</fullName>
    <label>CPNI Password Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>