force-app/main/default/objects/Credit_History__c/fields/Cust_Auth_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_Auth_ID__c</fullName>
    <label>Customer Authorization ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>