force-app/main/default/objects/Credit_History__c/fields/Customer_DL__c.field-meta.xml
<CustomField>
    <fullName>Customer_DL__c</fullName>
    <label>Customer DL#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>