force-app/main/default/objects/Credit_History__c/fields/Customer_SSN__c.field-meta.xml
<CustomField>
    <fullName>Customer_SSN__c</fullName>
    <label>Customer SSN#</label>
    <length>9</length>
    <type>Text</type>
</CustomField>