force-app/main/default/objects/Credit_History__c/fields/Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address__c</fullName>
    <label>Employer Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>