force-app/main/default/objects/Credit_History__c/fields/Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone__c</fullName>
    <label>Employer Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>