force-app/main/default/objects/Credit_History__c/fields/Guarantors_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantors_Name__c</fullName>
    <label>Guarantors Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>