force-app/main/default/objects/Credit_History__c/fields/Guarantors_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantors_Phone__c</fullName>
    <label>Guarantors Phone</label>
    <type>Phone</type>
</CustomField>