force-app/main/default/objects/Credit_History__c/fields/Hotspot_HSI_Info__c.field-meta.xml
<CustomField>
    <fullName>Hotspot_HSI_Info__c</fullName>
    <label>Hotspot/HSI # Info</label>
    <length>60</length>
    <type>Text</type>
</CustomField>