force-app/main/default/objects/Credit_History__c/fields/Landlord_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name__c</fullName>
    <label>Landlord Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>