force-app/main/default/objects/Credit_History__c/fields/Landlord_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Phone__c</fullName>
    <label>Landlord Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>