force-app/main/default/objects/Credit_History__c/fields/Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Managers_Name__c</fullName>
    <label>Managers Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>