force-app/main/default/objects/Credit_History__c/fields/Managers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Managers_Phone__c</fullName>
    <label>Managers Phone#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>