force-app/main/default/objects/Credit_History__c/fields/Misc_Info_1B__c.field-meta.xml
<CustomField>
    <fullName>Misc_Info_1B__c</fullName>
    <label>Misc Info 1B</label>
    <length>60</length>
    <type>Text</type>
</CustomField>