force-app/main/default/objects/Credit_History__c/fields/Misc_Info_3__c.field-meta.xml
<CustomField>
    <fullName>Misc_Info_3__c</fullName>
    <label>Misc Info 3</label>
    <length>60</length>
    <type>Text</type>
</CustomField>