force-app/main/default/objects/Credit_History__c/fields/Nearest_Relative__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Relative__c</fullName>
    <label>Nearest Relative</label>
    <length>30</length>
    <type>Text</type>
</CustomField>