force-app/main/default/objects/Credit_History__c/fields/Oth_Adlt_Rmate_1__c.field-meta.xml
<CustomField>
    <fullName>Oth_Adlt_Rmate_1__c</fullName>
    <label>Oth Adlt/Roommate 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>