force-app/main/default/objects/Credit_History__c/fields/Previous_Phone__c.field-meta.xml
<CustomField>
    <fullName>Previous_Phone__c</fullName>
    <label>Previous Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>