force-app/main/default/objects/Credit_History__c/fields/Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag__c</fullName>
    <label>Red Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>