force-app/main/default/objects/Credit_History__c/fields/Related_Hotspot_No__c.field-meta.xml
<CustomField>
    <fullName>Related_Hotspot_No__c</fullName>
    <label>Related Hotspot No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>