force-app/main/default/objects/Credit_History__c/fields/Relative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Relative_Phone__c</fullName>
    <label>Relative Phone</label>
    <type>Phone</type>
</CustomField>