force-app/main/default/objects/Credit_History__c/fields/Relatives_Address__c.field-meta.xml
<CustomField>
    <fullName>Relatives_Address__c</fullName>
    <label>Relatives Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>