force-app/main/default/objects/Credit_History__c/fields/Residence_Info__c.field-meta.xml
<CustomField>
    <fullName>Residence_Info__c</fullName>
    <label>Residence Info(Rent/Buy/Own)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>