force-app/main/default/objects/Credit_History__c/fields/Rnship_To_Sub__c.field-meta.xml
<CustomField>
    <fullName>Rnship_To_Sub__c</fullName>
    <label>Relationship To Sub</label>
    <length>18</length>
    <type>Text</type>
</CustomField>