force-app/main/default/objects/Credit_History__c/fields/Spouse_DL__c.field-meta.xml
<CustomField>
    <fullName>Spouse_DL__c</fullName>
    <label>Spouse DL#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>