force-app/main/default/objects/Credit_History__c/fields/Spouse_DOB__c.field-meta.xml
<CustomField>
    <fullName>Spouse_DOB__c</fullName>
    <label>Spouse DOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>