force-app/main/default/objects/Credit_History__c/fields/Spouse_Emp_Add__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Emp_Add__c</fullName>
    <label>Spouse Employer Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>