force-app/main/default/objects/Credit_History__c/fields/Spouse_Emp_Nme__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Emp_Nme__c</fullName>
    <label>Spouse Employer Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>