force-app/main/default/objects/Credit_History__c/fields/Spouse_Nme_Frst__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Nme_Frst__c</fullName>
    <label>Spouse Name First</label>
    <length>12</length>
    <type>Text</type>
</CustomField>