force-app/main/default/objects/Credit_History__c/fields/Spouse_Nme_Lst__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Nme_Lst__c</fullName>
    <label>Spouse Name Last</label>
    <length>16</length>
    <type>Text</type>
</CustomField>