force-app/main/default/objects/Credit_History__c/fields/Spouse_SSN__c.field-meta.xml
<CustomField>
    <fullName>Spouse_SSN__c</fullName>
    <label>Spouse SSN#</label>
    <length>9</length>
    <type>Text</type>
</CustomField>