force-app/main/default/objects/Credit_History__c/fields/Ssn__c.field-meta.xml
<CustomField>
    <fullName>Ssn__c</fullName>
    <label>Social Security Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>