force-app/main/default/objects/Credit_History__c/fields/Vacation_React_Code__c.field-meta.xml
<CustomField>
    <fullName>Vacation_React_Code__c</fullName>
    <label>Vacation Reactivation Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>