force-app/main/default/objects/Credit_History__c/fields/x3rd_Party_Code__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Code__c</fullName>
    <label>3rd Party Notification Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>